# itmo_queues_bot

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yaml
app/: __main__.py
app/application/bot/: __init__.py  bot.py
app/application/bot/logic/: __init__.py
app/application/bot/logic/dialogs/: __init__.py
app/application/bot/logic/handlers/: __init__.py  main.py
app/application/bot/runners/: __init__.py  pooling.py  webhook.py
app/container/: container.py
app/container/providers/: __init__.py  bot.py  default.py
app/core/settings/: bot.py  database.py  redis.py  settings.py  webhook.py
app/domain/entities/: base.py
app/domain/exceptions/: base.py
app/domain/values/: base.py
app/infrastructure/dto/: base.py
app/infrastructure/gateways/postgresql/alembic/: env.py
app/infrastructure/gateways/postgresql/models/: base.py
app/logic/commands/: base.py
app/logic/queries/: base.py
